# visionworkbench

./: .gitignore  AUTHORS  AUTHORS.rst  CMakeLists.txt  COPYING  ChangeLog  INSTALL  INSTALLGUIDE  Makefile.am  NEWS  NEWS.rst  NOTES  README  README.md  README.rst  acinclude.m4  autogen  config.options.columbia  config.options.example  config.options.irg  configure.ac  configure.ac~
Python/vw/: Makefile.am  __init__.py  _cartography.i  _composite.i  _core.i  _fileio.i  _filter.i  _image.i  _imagemanip.i  _mosaic.i  _pixel.i  _pixelcast.i  _qtree.h  _qtree.i  _transform.i  vwutil.i
graveyard/: AdjustRobustRef.h  AdjustRobustSparse.h  AdjustSparse.h  ba_test.cc  ba_unit_test  config.options.example  configure.ac  geoblend.cc  geoblend.h  make_ba_test_data.cc
graveyard/GPU/: Algorithms.cc  Algorithms.h  Expressions.cc  Expressions.h  Filter.cc  GPUImage.h  GPUProgram.h  GenericShaders.cc  GenericShaders.h  ImageMath.cc  Interpolation.h  Manipulation.cc  Manipulation.h  Setup.h  Shaders.h  Statistics.cc  Statistics.h  TexAlloc.cc  TexAlloc.h  TexObj.cc  TexObj.h  Transform.cc  Transform.h  Utilities.cc
graveyard/GPU/tests/: Makefile.am  TestGPU_Algorithms.oldtest  TestGPU_EdgeExtend.oldtest  TestGPU_Filter.oldtest  TestGPU_ImageMath.oldtest  TestGPU_Interpolation.oldtest  TestGPU_Manipulation.oldtest  TestGPU_Profile.oldtest  TestGPU_Statistics.oldtest  TestGPU_Transform.oldtest
graveyard/Plate/: Blob.cc  BlobManager.cc  BlobManager.h  Datastore.h  Exception.cc  Exception.h  FundamentalTypes.cc  FundamentalTypes.h  HTTPUtils.cc  HTTPUtils.h  IndexData.proto  IndexService.cc  IndexService.h  IndexService.proto  Palette.h  PlateCarreePlateManager.cc  PlateFile.cc  PlateFile.h  PlateManager.h  PlateView.h  PolarStereoPlateManager.cc  README  Rpc.cc  Rpc.h  RpcChannel.cc  SnapshotManager.cc  TileManipulation.cc  ToastDem.cc  ToastDem.h  ToastPlateManager.cc  ToastPlateManager.h  blob_file_dump.cc  dump_page.cc  image2plate.cc  index_client.cc  index_perftest.cc  index_server.cc  mipmap.cc  mod_plate.h  mod_plate_core.h  (+17 more)
graveyard/Plate/detail/: AmqpChannel.cc  Blobstore.cc  Dirstore.cc  Dirstore.h  Index.cc  Index.h  IndexPage.cc  IndexPage.h  MipmapHelpers.h  PagedIndex.cc  PagedIndex.h  RemoteIndex.cc  RemoteIndex.h  Seed.cc  ZeroMQChannel.cc  ZeroMQChannel.h
graveyard/Plate/google/: Makefile.am  README  type_traits.h
graveyard/Plate/tests/: TestBlobIO.cxx  TestBlobManager.cxx  TestDatastore.cxx  TestHTTPUtils.cxx  TestIndexPage.cxx  TestLocalIndex.cxx  TestModPlate.cxx  TestModPlateRegression.py  TestPlateIndexServer.cxx  TestPlateManager.cxx  TestRpc.cxx  TestRpcChannel.cxx  TestSnapshotManager.cxx  TestTileManipulation.cxx  TestTransactions.cxx
graveyard/config/: instantiate.am  tests.am
graveyard/gui/: ImageTileGenerator.cc  MainWidget.cc  MainWidget.h  MainWindow.h  Makefile.am  PlatefileTileGenerator.cc  TextureCache.cc  TextureCache.h  WebTileGenerator.cc  WebTileGenerator.h
graveyard/m4/: ax_pkg_apple.m4
graveyard/run_ba_tests_lib/File/: Path.pm
graveyard/run_ba_tests_lib/Statistics/: Descriptive.pm
src/: CMakeLists.txt  Doxyfile  Makefile.am
src/test/: Helpers.h  Makefile.am  geotif-generate.cc  image2qtree_test.py  test_main.cc
src/vw/: BundleAdjustment.h  CMakeLists.txt  Camera.h  Cartography.h  Core.h  Doxyfile  Doxygen.h  FileIO.h  GPU.h  GenerateConfig.cmake  Geometry.h  HDR.h  Image.h  InterestPoint.h  Makefile.am  Math.h  Mosaic.h  Photometry.h  Stereo.h  config.h.in  tools.h  vw.h  vw_config.h.in  vw_date_config.h.in
src/vw/BundleAdjustment/: AdjustBase.h  AdjustRef.h  AdjustRobustRef.h  AdjustRobustSparse.h  AdjustRobustSparseKGCP.h  AdjustSparse.h  BundleAdjustReport.cc  BundleAdjustReport.h  CMakeLists.txt  CameraRelation.cc  CameraRelation.h  ControlNetwork.cc  ControlNetwork.h  ControlNetworkLoader.cc  ControlNetworkLoader.h  Makefile.am  ModelBase.h  openMVG_flat_pair_map.h  openMVG_match.h  openMVG_tracks.h  openMVG_types.h  openMVG_union_find.h
src/vw/Camera/: BayerFilter.h  BundleAdjust.h  BundleAdjustModelBase.h  BundleAdjustReport.cc  BundleAdjustReport.h  BundleAdjustmentBase.h  BundleAdjustmentRef.h  BundleAdjustmentRobustRef.h  BundleAdjustmentRobustSparse.h  BundleAdjustmentRobustSparseKGCP.h  BundleAdjustmentSparse.h  CAHVModel.cc  CAHVModel.h  CAHVOREModel.cc  CAHVOREModel.h  CAHVORModel.cc  CAHVORModel.h  CMakeLists.txt  CameraGeometry.cc  CameraGeometry.h  CameraImage.cc  CameraImage.h  CameraModel.cc  CameraModel.h  CameraParamsPack.cc  CameraParamsPack.h  CameraRelation.cc  CameraRelation.h  CameraSolve.h  CameraTransform.h  CameraUtilities.cc  CameraUtilities.h  ControlNetwork.cc  ControlNetwork.h  ControlNetworkLoader.cc  ControlNetworkLoader.h  EpipolarUtils.cc  EpipolarUtils.h  Exif.cc  Exif.h  (+30 more)
src/vw/Cartography/: BathyCamera.cc  BathyCamera.h  BathyData.cc  BathyData.h  BathyRay.cc  BathyRay.h  BathyStereoModel.cc  BathyStereoModel.h  CMakeLists.txt  CameraBBox.cc  CameraBBox.h  CameraDatumFit.cc  CameraDatumFit.h  Chipper.cc  Chipper.h  Datum.cc  Datum.h  DatumDesc.proto  DatumUtils.cc  DatumUtils.h  DiskImageResourceGDAL.cc  DiskImageResourceGDAL.h  DiskImageResourceGeoReferenceHelperGDAL.cc  DiskImageResourceGeoReferenceHelperGDAL.h  DiskImageResourceGeoReferenceHelperJP2.cc  DiskImageResourceGeoReferenceHelperPDS.cc  FileIO.h  GeoReference.cc  GeoReference.h  GeoReferenceBase.cc  GeoReferenceBase.h  GeoReferenceBaseUtils.cc  GeoReferenceBaseUtils.h  GeoReferenceDesc.proto  GeoReferenceResourceGDAL.cc  GeoReferenceResourceGDAL.h  GeoReferenceResourcePDS.cc  GeoReferenceResourcePDS.h  GeoReferenceUtils.cc  GeoReferenceUtils.h  (+28 more)
src/vw/Core/: CMakeLists.txt  Cache.cc  Cache.h  Cache.tcc  CmdUtils.cc  CmdUtils.h  CompoundTypes.h  Condition.h  ConfigParser.cc  ConfigParser.h  Debugging.cc  Debugging.h  Exception.cc  Exception.h  Features.h  Functors.h  FundamentalTypes.h  Log.cc  Log.h  Makefile.am  ProgressCallback.cc  ProgressCallback.h  RunOnce.h  Settings.cc  Settings.h  Stopwatch.cc  Stopwatch.h  StringUtils.cc  StringUtils.h  System.cc  System.h  TemporaryFile.cc  TemporaryFile.h  TerminationHandler.cc  (+8 more)
(+2105 files in other folders)
